--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = uno
 framework = arduino
 
 [platformio]
-description = Parpadeo de Led, Practica de Funciones Delay, PinMode, DigitalWrite
+description = Descripcion y Uso de Funciones AnalogWrite (PWM) y AnalogRead (ADC)
