--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = uno
 framework = arduino
 
 [platformio]
-description = Descripcion y Uso de Funciones AnalogWrite (PWM) y AnalogRead (ADC)
+description = Aplicando los conocimientos realizados en los ejercicios anteriores, se leera valores analogicos de un sensor lm35 y utilizando los conocimientos previos, se controlaran distintas salidas, en funcion de la temperatura
