--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = uno
 framework = arduino
 
 [platformio]
-description = Parpadeo de Led, Practica de Funciones Delay, PinMode, DigitalWrite
+description = Sensor ultrasonico HC-SR04: Interpretacion, Manejo y uso
