--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = uno
 framework = arduino
 
 [platformio]
-description = Sensor ultrasonico HC-SR04: Interpretacion, Manejo y uso
+description = SERVO SG90: Interpretacion, Manejo y uso sin LIBRERIA
