--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = arduino-libraries/Servo@^1.1.8
 
 [platformio]
-description = SERVO SG90: Interpretacion, Manejo y uso sin LIBRERIA
+description = SERVO SG90: Interpretacion, Manejo y uso CON LIBRERIA
