--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 lib_deps = arduino-libraries/Servo@^1.1.8
 
 [platformio]
-description = SERVO SG90: Interpretacion, Manejo y uso CON LIBRERIA
+description = SERVO SG90 + HC-SR04, Introduccion a las Funciones. El proyecto, mueve el servo y muestra la distancia
