Clase 9 Adaptando Valores a 0-255 a 0-100

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = arduino-libraries/Servo@^1.1.8
 
 [platformio]
-description = Clase 8, Puente H L298 control de motores CC.-
+description = Clase 9 L298 cambiando la funcion de 0-255 a 0-100 float
