--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = uno
 framework = arduino
 
 [platformio]
-description = Clase 9 L298 cambiando la funcion de 0-255 a 0-100 float
+description = Conociendo las Interrupciones
