--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+#lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
 
 [platformio]
 description = TACOMETRO CON INTERRUPCIONES
