--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = 
-	marcoschwartz/LiquidCrystal_I2C@^1.1.4
-	miguel5612/MQUnifiedsensor@^3.0.0
+lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
 
 [platformio]
-description = TACOMETRO CON INTERRUPCIONES
+description = Clase 12, LCD + Sensor MQ6
