--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
 
 [platformio]
-description = Clase 12, LCD + TACOMETRO
+description = Clase 12, LCD + TACOMETRO. Unificacion de INTERRUPCIONES + LCD + DISPLAY
