Clase 13, Robot Completo.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,10 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	arduino-libraries/Servo@^1.1.8
+	z3t0/IRremote@^3.7.0
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 
 [platformio]
-description = Clase 12, LCD + Sensor MQ6
+description = Clase 13, ROBOT COMPLETO
