--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
-
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	arduino-libraries/Servo@^1.1.8
 [platformio]
-description = Clase 12, LCD + Sensor MQ6
+description = Clase 13 ROBOT
