--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 lib_deps = 
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	arduino-libraries/Servo@^1.1.8
+	paulstoffregen/TimerOne@^1.1
+
 [platformio]
 description = Clase 13 ROBOT
